@@ -1,3 +1,4 @@
+Revision 126 	 2011-08-20 	 Adding college_email_id to search fileds 
 Revision 125 	 2011-08-20 	 Bumping the number of uwsgi processes to 2 
 Revision 124 	 2011-08-20 	 changing passwd in new accounts to use digits only. Easy for students to notedown the new password 
 Revision 123 	 2011-08-20 	 Adding a unique digit after username if unique username is not found 
